k8s/sanplan/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanplan-frontend
  labels:
    app: sanplan-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanplan-frontend
  template:
    metadata:
      labels:
        app: sanplan-frontend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: nginx
        image: 249899228725.dkr.ecr.ap-northeast-1.amazonaws.com/dev-k8s-sanplan-frontend:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 10
