k8s/sanplan/backend-bun-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanplan-backend-bun
spec:
  selector:
    app: sanplan-backend-bun
  ports:
  - port: 3001
    targetPort: 3001
