k8s/sanplan/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanplan-backend
spec:
  type: ClusterIP
  selector:
    app: sanplan-backend
  ports:
  - port: 3000
    targetPort: 3000
