k8s/sanplan/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanplan-frontend
spec:
  type: ClusterIP
  selector:
    app: sanplan-frontend
  ports:
  - port: 80
    targetPort: 80
